vendor/linux/x64/ftd2xx.h


typedef PVOID	FT_HANDLE;
	FTD2XX_API BOOL WINAPI FT_W32_EscapeCommFunction(
		FT_HANDLE ftHandle,
		DWORD dwFunc
		);
	FTD2XX_API BOOL WINAPI FT_W32_GetCommModemStatus(
		FT_HANDLE ftHandle,
		LPDWORD lpdwModemStatus
		);
	FTD2XX_API BOOL WINAPI FT_W32_SetupComm(
		FT_HANDLE ftHandle,
		DWORD dwReadBufferSize,
		DWORD dwWriteBufferSize
		);
typedef struct _FTCOMSTAT {
	DWORD fCtsHold : 1;
	DWORD fDsrHold : 1;
	DWORD fRlsdHold : 1;
	DWORD fXoffHold : 1;
	DWORD fXoffSent : 1;
	DWORD fEof : 1;
	DWORD fTxim : 1;
	DWORD fReserved : 25;
	DWORD cbInQue;
	DWORD cbOutQue;
} FTCOMSTAT, *LPFTCOMSTAT;
typedef struct _FTDCB {
	DWORD DCBlength;              
	DWORD BaudRate;               
	DWORD fBinary : 1;            
	DWORD fParity : 1;            
	DWORD fOutxCtsFlow : 1;       
	DWORD fOutxDsrFlow : 1;       
	DWORD fDtrControl : 2;        
	DWORD fDsrSensitivity : 1;    
	DWORD fTXContinueOnXoff : 1;  
	DWORD fOutX : 1;              
	DWORD fInX : 1;               
	DWORD fErrorChar : 1;         
	DWORD fNull : 1;              
	DWORD fRtsControl : 2;        
	DWORD fAbortOnError : 1;      
	DWORD fDummy2 : 17;           
	WORD wReserved;               
	WORD XonLim;                  
	WORD XoffLim;                 
	BYTE ByteSize;                
	BYTE Parity;                  
	BYTE StopBits;                
	char XonChar;                 
	char XoffChar;                
	char ErrorChar;               
	char EofChar;                 
	char EvtChar;                 
	WORD wReserved1;              
} FTDCB, *LPFTDCB;
typedef struct _FTTIMEOUTS {
	DWORD ReadIntervalTimeout;          
	DWORD ReadTotalTimeoutMultiplier;   
	DWORD ReadTotalTimeoutConstant;     
	DWORD WriteTotalTimeoutMultiplier;  
	DWORD WriteTotalTimeoutConstant;    
} FTTIMEOUTS, *LPFTTIMEOUTS;
	FTD2XX_API BOOL WINAPI FT_W32_SetCommState(
		FT_HANDLE ftHandle,
		LPFTDCB lpftDcb
		);
	FTD2XX_API BOOL WINAPI FT_W32_GetCommState(
		FT_HANDLE ftHandle,
		LPFTDCB lpftDcb
		);
	FTD2XX_API BOOL WINAPI FT_W32_SetCommTimeouts(
		FT_HANDLE ftHandle,
		FTTIMEOUTS *pftTimeouts
		);
	FTD2XX_API BOOL WINAPI FT_W32_GetCommTimeouts(
		FT_HANDLE ftHandle,
		FTTIMEOUTS *pftTimeouts
		);
	FTD2XX_API BOOL WINAPI FT_W32_SetCommBreak(
		FT_HANDLE ftHandle
		);
	FTD2XX_API BOOL WINAPI FT_W32_ClearCommBreak(
		FT_HANDLE ftHandle
		);
	FTD2XX_API BOOL WINAPI FT_W32_SetCommMask(
		FT_HANDLE ftHandle,
		ULONG ulEventMask
		);
	FTD2XX_API BOOL WINAPI FT_W32_GetCommMask(
		FT_HANDLE ftHandle,
		LPDWORD lpdwEventMask
		);
	FTD2XX_API BOOL WINAPI FT_W32_WaitCommEvent(
		FT_HANDLE ftHandle,
		PULONG pulEvent,
		LPOVERLAPPED lpOverlapped
		);
	FTD2XX_API BOOL WINAPI FT_W32_PurgeComm(
		FT_HANDLE ftHandle,
		DWORD dwMask
		);
	FTD2XX_API BOOL WINAPI FT_W32_ClearCommError(
		FT_HANDLE ftHandle,
		LPDWORD lpdwErrors,
		LPFTCOMSTAT lpftComstat
		);